# Luxor9

./: .env.production  .env.template  .eslintrc.js  .gitignore  .jupyter-releaser.yaml  .prettierrc.js  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MIGRATION.md  README.md  backend_test.py  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  lerna.json  netlify.toml  package-lock.json  package.json  pyproject.toml  test_result.md  tsconfig.json  turbo.json  vercel.json
.changeset/: initial-modernization.md
.emergent/: summary.txt
.github/workflows/: check-release.yml  ci-cd.yml  deploy-ai.yml  deploy-saas.yml
backend/: .env  github_service.py  requirements.txt  server.py
frontend/: .env
frontend/src/: App.js
frontend/src/components/: RepositoryList.js
infra/docker/: docker-compose.core.yml  docker-compose.streams.yml  env.template  secrets.template
scripts/: bootstrap-luxor9.ps1  migrate-legacy.sh  validate-migration-readiness.sh
scripts/deployment/: deploy.sh  health-check.sh
